Create form for updating genres

--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -20,4 +20,6 @@ block content
     hr
     p
         a(href=genre.url+'/delete') Delete author
+    p
+        a(href=genre.url+'/update') Update genre
 
